objects/CallDetail__c.object
<CustomObject>
    <fields>
        <fullName>CallComments__c</fullName>
        <description>Call Comments</description>
        <label>CallComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CallDirection__c</fullName>
        <description>CallDirection</description>
        <label>CallDirection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <description>CallDurationInSeconds</description>
        <label>CallDurationInSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallEndTime__c</fullName>
        <description>CallEndTime</description>
        <label>CallEndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallStartTime__c</fullName>
        <description>CallStartTime</description>
        <label>CallStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CallDetails</relationshipLabel>
        <relationshipName>CallDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberDialed__c</fullName>
        <description>Number dialed</description>
        <label>NumberDialed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number dialed from</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SkillName__c</fullName>
        <label>SkillName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CallDetail</label>
    <nameField>
        <label>CallDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>